--- a/проджект четатам/index.html
+++ b/проджект четатам/index.html
@@ -47,31 +47,64 @@
             <img src="images/home-header_image.svg.png" alt="heroblock" style="width: 600px;">
         </section>
 
-        <section class="container">
-            <div class="advantages">
+    <section class="container">
+        <div class="advantages">
+            <div class="#">
                 <h2>Сотрудникам</h2>
-                <p>Возможность запросить мнения коллег о своей работе, чтобы предоставить полную информацию для оценки</p>
-                <p>Самооценка в несколько кликов для выражения своего мнения о результатах работы для руководителей</p>
-                <p>Итоговые результаты и комментарии от руководителей в вашем профиле на платформе</p>
-                <p>Просмотр результатов по целям, обновление статуса их выполнения</p>
-                <p>Функция дополнения списка оценивающих руководителей</p>
-                <h2>Рукаводителям</h2>
-                <p>Оценка только непосредственным руководителем или согласование оценок со всеми руководителями по организационной структуре</p>
-                <p>Полный и корректный список сотрудников для оценки в соответствии со структурой организации</p>
-                <p>Карточка с информацией о каждом сотруднике для принятия взвешенных решений об оценках</p>
-                <p>Дашборд с необходимой аналитикой и данными по оценке персонала</p>
-                <h2>HR-специалистам</h2>
-                <p>Удобное управление кампаниями оценки – отменить, удалить, изменить даты этапов, добавить участников</p>
-                <p>Гибкая настройка всех параметров оценки в соответствии с процессом в вашей компании</p>
-                <p>Аналитика по прогрессу оценки эффективности</p>
-                <p>Создание и запуск кампаний в пару кликов</p>
-                <p>Отчёты по подразделениям и сотрудникам</p>
-                
+                <p>✔ Возможность запросить мнения коллег о своей работе, чтобы предоставить полную информацию для оценки</p>
+                <p>✔ Самооценка в несколько кликов для выражения своего мнения о результатах работы для руководителей</p>
+                <p>✔ Итоговые результаты и комментарии от руководителей в вашем профиле на платформе</p>
+                <p>✔ Просмотр результатов по целям, обновление статуса их выполнения</p>
+                <p>✔ Функция дополнения списка оценивающих руководителей</p>
             </div>
-        </section>
+            <div class="#">
+                <h2>Рукаводителям</h2>
+                <p>✔ Оценка только непосредственным руководителем или согласование оценок со всеми руководителями по организационной структуре</p>
+                <p>✔ Полный и корректный список сотрудников для оценки в соответствии со структурой организации</p>
+                <p>✔ Карточка с информацией о каждом сотруднике для принятия взвешенных решений об оценках</p>
+                <p>✔ Дашборд с необходимой аналитикой и данными по оценке персонала</p>
+            </div>
+            <div class="#">
+                <h2>HR-специалистам</h2>
+                <p>✔ Удобное управление кампаниями оценки – отменить, удалить, изменить даты этапов, добавить участников</p>
+                <p>✔ Гибкая настройка всех параметров оценки в соответствии с процессом в вашей компании</p>
+                <p>✔ Аналитика по прогрессу оценки эффективности</p>
+                <p>✔ Создание и запуск кампаний в пару кликов</p>
+                <p>✔ Отчёты по подразделениям и сотрудникам</p>
+            </div>
+        </div>
+    </section>
 
-        <section class="container" style="flex-direction: column;">
-            <h2>500+ компаний выбирают Ligatura</h2>
+<section class="container">
+    <!--Этап 1: Сбор первичной информации Этап 2: Анализ собранных данных Этап 3: Определение зон роста и разработка рекомендаций Этап 4: создание плана развития мониторинг прогресса  
+    нужно это всё красиво расставить и сделать сверху кортинку
+    купите продукт/ кнопочка, большой текст всё такое
+    снизу сделать кортинку -->
+</section>
+
+    <container class="gallery">
+        <div class="gallery-item">
+            <img src="images/AIboss1.jpg" alt="no img">
+            <div class="caption">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero veritatis explicabo quas tempora consectetur pariatur quidem, earum amet magnam modi. Vel dignissimos magni, delectus neque laborum iste odio aut dolore.</div>
+        </div>
+        <div class="gallery-item">
+            <img src="images/AIboss2.jpg" alt="no img">
+            <div class="caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti voluptas esse ipsum odit veritatis earum, dolorem temporibus? Accusamus rem a, labore nemo enim expedita, ex incidunt doloremque sapiente dolores eaque?</div>
+        </div>
+        <div class="gallery-item">
+            <img src="images/AIboss3.jpg" alt="no img">
+            <div class="caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit eligendi, ut voluptate illum, voluptatum, itaque modi delectus nihil eaque ipsam dolorem sed fuga deserunt! Molestiae veritatis odio enim fugit praesentium.</div>
+        </div>
+    </container>
+
+<section class="container">
+    <!--закажите услугу 
+    кнопочки и всякое такое 
+    возможно наверное может быть-->
+</section>
+
+    <section class="container-fill" style="flex-direction: column;">
+        <h2>500+ компаний выбирают Ligatura</h2>
             <p>С платформой работает средний, крупный бизнес и вузы.Среди наших клиентов крупнейшие компании:производства, телеком, банки, фармацевтика, авто, IT</p>
                 <div class="pictures">
                     <img src="images/main-logo.png" alt="logo1">
